# pypsa-training-sessions

./: .gitignore  README.md  pyproject.toml
faq/: 2025-02-11_oet.md
notebooks/: pypsa_statistics.ipynb
tests/: test_statistics.py
