[project]
name = "pypsa-statistics-training"
version = "0.1.0"
description = "Training project demonstrating PyPSA's n.statistics module"
requires-python = ">=3.11"
dependencies = [
    "pypsa>=1.0.7",
    "jupyter",
    "matplotlib",
    "pandas",
    "plotly",
    "jupyterlab-myst",
    "jupyterlab-execute-time",
    "jupyterlab-hide-code",
]

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
